@@ -1,3 +1,7 @@
+2003-12-14 Erik Petrich <epetrich@ivorytower.norman.ok.us>
+
+	* support/makebin/makebin.c: put output in binary mode
+
 2003-12-13 Frieder Ferlemann <Frieder.Ferlemann@web.de>
 
 	* src/mcs51/main.c: fixed bug #737001 for the mcs51. SDCC clears 
